# pysco

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
docs/: conf.py  index.rst  modules.rst
pysco/: __init__.py  eryn.py  lisautils.py  performance.py  plot.py  pysco.py  utils.py
pysco/lisautils/: emris.py
scripts/: clean_gpu.sh
src/pysco/: __init__.py  eryn.py  pysco.py  utils.py
src/pysco/plots/: __init__.py  journals.py  plot.py
src/pysco/plots/mplfiles/: corner.mplstyle  paper.mplstyle
tests/: test_journals.py
