[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysco"
dynamic = ["version"]
description = "PYthon ShortCuts & Others: plotting routines I like to use & overall collection of useful snippets"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Alessandro Santini", email = "alessandro.santini@aei.mpg.de" }
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "corner",
    "GPUtil",
    "pandas",
    "chainconsumer",
    "importlib_resources; python_version < '3.9'",
]

[project.optional-dependencies]
eryn = [
    "eryn",
    "scipy",
    "tqdm",
    "h5py",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pysco.plots" = ["mplfiles/*.mplstyle"]

[tool.setuptools.dynamic]
version = {attr = "pysco.__version__"}
